# moonlight-embedded

./: .gitignore  AGENTS.md  CMakeLists.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-stats-overlay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-stats-overlay/checklists/: requirements.md
specs/001-stats-overlay/contracts/: stats-overlay.md
src/: config.c  config.h  connection.c  connection.h  main.c  platform.c  platform.h  sdl.c  stats_overlay.c  stats_overlay.h  stats_overlay_draw.c  stats_overlay_font.h
src/video/: aml.c  sdl.c  x11.c
tests/: CMakeLists.txt
tests/stats_overlay/: test_stats_overlay_config.c  test_stats_overlay_runtime.c
